--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -2,5 +2,5 @@
 <div>
 	<%= f.hidden_field :followed_id %>
 </div>
-<%= f.submit "Follow", class: "btn btn-large btn-primary" %>
+<%= f.submit t('follow'), class: "btn btn-large btn-primary" %>
 <% end %>
