fixed engl city names on last active

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,7 +2,7 @@
 	<%= gravatar_for user, size: 92 %>
 	<h3><%= link_to user.name, user %></h3>
 	<% unless user.last_active.nil? %>
-		<p>letzte Aktivität in <b><%= user.last_active %></b></p>
+		<p>letzte Aktivität in <b><%= t('home.micropost.'+user.last_active) %></b></p>
 	<% end %>
 	<% if current_user.admin? && !current_user?(user) %>
 	| <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
