--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,7 @@
 </li> -->
 					<li><a href="" class="lsf-icon" title="tilemenu" style="font-size: 20px; color: #CCC; margin-right: -32px;"></a></li>
 					<li><%= link_to t('link.home'), root_path %></li>
+					<li><%= link_to t('link.news'), news_path %></li>
 					<li><a href="<%= search_path %>" class="lsf-icon" title="search" style="font-size: 20px; color: #CCC; margin-right: -32px;"></a></li>
 					<li> <%= link_to t('link.search'), search_path %></li>
 					<li><a href="<%= help_path %>" class="lsf-icon" title="hot" style="font-size: 20px; color: #CCC; margin-right: -32px;"></a></li>
