--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -8,5 +8,5 @@
 	<%= link_to t('link.profile'), current_user %>
 </span>
 <span>
-	<%= pluralize(current_user.microposts.count, "micropost") %>
+	<%= pluralize(current_user.microposts.count, "Activity") %>
 </span>
