--- a/app/views/shared/_user_info.mobile.erb
+++ b/app/views/shared/_user_info.mobile.erb
@@ -6,6 +6,6 @@
 	<%= link_to current_user.name, current_user, :'data-role' => 'button', :'data-corners' => 'false', :'data-inline' => 'true', :'data-shadow' => 'false' %>
 <div>
 <div>
-	<%= pluralize(current_user.microposts.count, "micropost") %>
+	<%= pluralize(current_user.microposts.count, "Activity") %>
 </div>
 </div><br><br><br>
