--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -8,40 +8,40 @@
 			<b>Wie mache ich das?</b> Ganz einfach:
 		</p><br>
 		<div class="span8 offset1">
-			<p class="lead"><i class="icon-pencil"></i> <small><i>Erstelle ein Micropost</i></small></p>
+			<p class="lead"><i class="icon-pencil"></i> <small><i>Erstelle eine Activity</i></small></p>
 			<ol class="offset1">
 				<li>Klicke auf meine Pinnwand.</li>
 				<li>Auf der linken Seite kannst du nun Sportart und Ort auswählen. <br>Die anderen Angaben sind optional.<br> <i><small>Tipp: Du musst deinen Ort nicht in der Liste suchen, wenn du die Geolocation deines Browser nutzt (einfach auf "zulassen" klicken). Connectify speichert KEINE Bewegungsprofile noch verkauft es deine Daten!</small></i></li>
 				<li>Mit einem Klick auf die kleine Map markierst du den genauen Ort oder einen Treffpunkt.</li>
 				<li>Wenn du magst, kannst du noch einen genauen Zeitpunkt wählen oder etwas über dich schreiben.</li>
-				<li>Abschicken und fertig :) Dein Micropost erscheint jetzt auf deiner <%= link_to "Pinnwand", root_path %> und auf deiner <%= link_to "Profilseite", current_user %>.<br>
-					<small><i>Jetzt musst du nur noch warten, bis jemand dein Micropost kommentiert oder sich via Facebook bei dir meldet. Um dein Micropost bekannter zu machen, kannst du es über den kleinen Facebook-Button am unteren Ende deines Microposts oder unter Details mit anderen auf Facebook teilen.</i></small></li>
+				<li>Abschicken und fertig :) Deine Activity erscheint jetzt auf deiner <%= link_to "Pinnwand", root_path %> und auf deiner <%= link_to "Profilseite", current_user %>.<br>
+					<small><i>Jetzt musst du nur noch warten, bis jemand deine Activity kommentiert oder sich via Facebook bei dir meldet. Um deine Activity bekannter zu machen, kannst du es über den kleinen Facebook-Button am unteren Ende deines Activities oder unter Details mit anderen auf Facebook teilen.</i></small></li>
 			</ol>
 		</div>
 		<div class="span8 offset1">
-			<p class="lead"><i class="icon-search"></i> <small><i>Suche Microposts von anderen Nutzern</i></small></p>
+			<p class="lead"><i class="icon-search"></i> <small><i>Suche Activities von anderen Nutzern</i></small></p>
 			<ol class="offset1">
 				<li>Klicke auf Suche um die gesamte Connectify-Pinnwand zu durchsuchen.</li>
 				<li>Wähle deine Stadt und drücke ganz fest beide Daumen.</li>
-				<li>Wenn du Glück hast, hat jemand schon ein Micropost für deine Stadt erstellt.<br> <i><small>
+				<li>Wenn du Glück hast, hat jemand schon eine Activity für deine Stadt erstellt.<br> <i><small>
 					Wenn nicht, ist das auch nicht schlimm, dann sei doch einfach du der Erste!</i></small></li>
-				<li>Mit einem Klick auf "Details", bekommst du zusätzliche Informationen über das entsprechende Micropost und kannst außerdem einen Kommentar hinterlassen bzw. den Ersteller direkt per Facebook kontaktieren (sofern er der Connectify-Facebookgruppe beigetreten ist).</li>
+				<li>Mit einem Klick auf "Details", bekommst du zusätzliche Informationen über die entsprechende Activity und kannst außerdem einen Kommentar hinterlassen bzw. den Ersteller direkt per Facebook kontaktieren (sofern er der Connectify-Facebookgruppe beigetreten ist).</li>
 
 		</div>
 		<div class="span8 offset1">
 			<p class="lead"><i class="icon-eye-open"></i> <small><i>Folge interessanten Nutzern</i></small></p>
 			<ol class="offset1">
-				<li>Du hast jemanden gefunden, der dein Hobby teilt, aber leider kein aktuelles Micropost hat.</li>
+				<li>Du hast jemanden gefunden, der dein Hobby teilt, aber leider keine Activity hat.</li>
 				<li>Dann folge ihm/ihr doch einfach.</li>
-				<li>Damit erscheinen alle neuen Microposts der betreffenden Person direkt auf deiner Pinnwand.</li>
+				<li>Damit erscheinen alle neuen Activities der betreffenden Person direkt auf deiner Pinnwand.</li>
 
 		</div>
 		<div class="span8 offset1">
-			<p class="lead"><i class="icon-star"></i> <small><i>Markiere dir wichtige Microposts</i></small></p>
+			<p class="lead"><i class="icon-star"></i> <small><i>Markiere dir wichtige Activities</i></small></p>
 			<ol class="offset1">
-				<li>Auf der Suche nach neuen Microposts kannst du dir beliebig viele Microposts merken.</li><a name="facebook"></a>
-				<li>Dazu markierst du einfach ein Micropost deiner Wahl mit einem Stern.</li>
-				<li>Danach erscheint das markierte Micropost auf deiner Pinwand.</li>
+				<li>Auf der Suche nach neuen Activities kannst du dir beliebig viele Activities merken.</li><a name="facebook"></a>
+				<li>Dazu markierst du einfach eine Activity deiner Wahl mit einem Stern.</li>
+				<li>Danach erscheint die markierte Activity auf deiner Pinwand.</li>
 
 		</div>
 		<div class="span8 offset1">
