--- a/app/views/static_pages/news.html.erb
+++ b/app/views/static_pages/news.html.erb
@@ -1,6 +1,11 @@
 <h1>Connectify Newsticker</h1>
 
 <div class="newsitem">
+	<p class="lead newsheadline "><b>Navigationsleiste entrümpelt - 5. April 2013</b><p>
+	<p class="lead newstext">Die Navitgationsleiste und die Startseite (nach der Anmeldung) sieht jetzt etwas aufgeräumter aus. Als nächstes werden die "Profil"- und die "alle User"-Seiten bearbeitet. <p>
+</div>
+
+<div class="newsitem">
 	<p class="lead newsheadline "><b>Facebook Nachrichten - 1. April 2013</b><p>
 	<p class="lead newstext">Kein Aprilscherz :) Facebook-Nachrichten an andere Connectify-Mitglieder können nun bequem direkt von Connectify aus geschickt werden - ohne die Umleitung auf die Facebook-Seite.<p>
 </div>
@@ -8,5 +13,5 @@
 <div class="newsitem">
 	<p class="lead newsheadline "><b>Fixed Bug: Link Detail Error - 21. März 2013</b><p>
 	<p class="lead newstext">Nachdem ich meinen Masterarbeitsvortrag hinter mich gebracht habe, kann ich mich endlich wieder der Seite widmen :D => Der Detail-Link zu den Microposts funktioniert wieder.<br>
-		und jetzt: 6 Tage Urlaub ... endlich... aber danach steht vielleicht Großes an, seid gespannt Konstanzer (ich bin es jedenfalls auch)!<p>
+		und jetzt: 6 Tage Urlaub ... endlich...<p>
 </div>
