--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <%provide(:title, @user.name) %>
 <% if signed_in? %>
-
+<% if current_user.admin? && !current_user?(@user) %>
+	| <%= link_to "delete", @user, method: :delete, data: { confirm: "You sure?" } %>
+	<% end %>
 <div class="row">
 	<aside class="span4">
 		<section>
