--- a/app/views/static_pages/_helptext.html.erb
+++ b/app/views/static_pages/_helptext.html.erb
@@ -7,39 +7,37 @@
 
 	<br>
 	<section id="help_wall">
-		<h2>Schreibe </h2><%= image_tag "post-it.jpg", :size => "50x50" %><h3> an unsere </h3><h1>Connectify-Pinnwand</h1>
+		<h1>Connectify ist neu.</h1><h2> Hilf uns zu wachsen, indem du eine Activity erstellst. </h2><h1>Danke.</h1><p style="text-align: center;"><%= image_tag "cat.jpg" %></p>
 	</section>
 
 	<section id="help_hobby">
-		<h4 class="lead">1. Dein Hobby</h4>
-		<p>Zuerst wählst du dein Hobby: z.B. Klettern, Joggen oder Bogenschießen.<br> Deines ist nicht dabei?! Schreib uns!</p>
+		<h4 class="lead">1. Hobby auswählen</h4>
 	</section>
 
 	<section id="help_place">
-		<h4 class="lead">2. Dein Ort</h4>
-		<p>Wenn du möchtest, wird deine aktuelle Stadt ermittelt. Keine Angst, wir speichern <em>KEINE</em> Bewegungsprofile oder ähnliche Dinge, die in deine Privatsphäre eingreifen. Es soll dir einfach helfen schneller zu sein. Sonst nichts.</p> 
+		<h4 class="lead">2. Ort auswählen</h4>
 	</section>
 
 	<section id="help_optional">
-		<h2 class="lead" style="border-bottom: 1px dashed #CCC; padding-bottom: 25px;">und schon fertig :-) Ab hier sind alle Angaben freiwillig!</h2>
+		<h2 class="lead" style="border-bottom: 1px dashed #CCC; padding-bottom: 25px; font-size: 1.5em;">und schon fertig :-) Ab hier sind alle Angaben freiwillig!</h2>
 	</section>
 
 	<section id="help_map">
-		<h4 class="lead">Dein Treffpunkt</h4>
+		<h4 class="lead">Treffpunkt auswählen</h4>
 		<p>Klick auf die Karte, um einen Treffpunkt festzulegen. Solltest du unentschlossen sein, lass diesen Schritt einfach aus.<br><em>Denke aber bitte daran, dass die Karte so wie du sie siehst, später auch allen anderen angezeigt wird. Solltest du also nicht wollen, dass jemand deinen ungefähren Wohnort kennt, setze den Marker einfach in die Stadtmitte oder deaktiviere die Geolocation-Funktion in deinem Browser.</em></p> 
 	</section>
 
 	<section id="help_time">
-		<h4 class="lead">Deine Zeit</h4>
+		<h4 class="lead">Zeit auswählen</h4>
 		<p>Wähle aus dem Kalender einen Tag und eine Uhrzeit aus. Dann klicke neben den Kalender ...und weiter gehts!</p> 
 	</section>
 
 	<section id="help_about">
-		<h4 class="lead">Deine Story</h4>
+		<h4 class="lead">Schreib etwas über dich...</h4>
 		<p>Jetzt kannst du noch etwas über dich oder die Welt schreiben - wenn du magst :)</p> 
 	</section>
 
 	<section id="help_submit">
-		<p>Ein Klick noch und du bist fertig.<br><br> Das war einfach... oder? Solltest du Probleme oder Fragen haben, schau dir die <%= link_to "Einführung", help_url %> an. <br>Viel Spaß auf Connectify!</p>
+		<p>Ein Klick noch auf "Abschicken" und du bist fertig.<br><br> Das war einfach... oder? Solltest du Probleme oder Fragen haben, schau dir die <%= link_to "Einführung", help_url %> an. <br>Viel Spaß auf Connectify!</p>
 	</section>
 </div>
